<resources>
    <string name="app_name">Capturer</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="video_title">Videos</string>
    <string name="gif_title">Gifs</string>
    <string name="launcher_name">@string/app_name</string>
    <string name="shortcut_name">Launch</string>
    <string name="clear">Clear</string>
    <string name="countdown_one" translatable="false">1</string>
    <string name="countdown_two" translatable="false">2</string>
    <string name="countdown_three" translatable="false">3</string>
    <string name="launch_overlay">Launch Overlay</string>
    <string name="preferences">Preferences</string>
    <string name="countdown">Three second countdown</string>
    <string name="recents_hide">Hide from recent apps</string>
    <string name="video_size_percentage">Resolution</string>
    <string name="notification_captured_title">Screen recording captured.</string>
    <string name="notification_captured_subtitle">Touch to view your screen recording.</string>
    <string name="notification_captured_share">Share</string>
    <string name="notification_captured_delete">Delete</string>
    <string name="notification_recording_title">Recording screen.</string>
    <string name="notification_recording_subtitle">Touch the clock area to stop recording.</string>
    <string name="recording_notification">Recording Notification</string>
    <string name="show_touches">Show Touches</string>
    <string name="share">Share</string>
    <string name="screenshot_saving_ticker">Saving screenshot\u2026</string>
    <string name="screenshot_saving_title">Saving screenshot\u2026</string>
    <string name="screenshot_saving_text">Screenshot is being saved.</string>
    <string name="screenshot_saved_title">Screenshot captured.</string>
    <string name="screenshot_saved_text">Touch to view your screenshot.</string>
    <string name="screenshot_failed_title">Couldn\'t capture screenshot.</string>
    <string name="screenshot_failed_text">Can\'t take screenshot due to limited storage space, or it isn\'t allowed by the app or your organization.</string>
    <string name="screenshot_delete_action">Delete</string>
    <string name="screenshot_delete_confirmation">Screenshot deleted.</string>
    <string name="screen_shot">Take Screenshot</string>
    <string name="chathead_content_title">Capturer is running</string>
    <string name="chathead_content_text">Try to shake your device or tap me…</string>
    <string name="shipped_ffmpeg_version" translatable="false">n2.4.2</string>
    <string name="video_size_percentage_summary">Videos with higher resolution look sharper</string>
    <string name="countdown_summary">wait three seconds when begin take a screen record</string>
    <string name="show_touches_summary">show a touch indicator when take a screen record</string>
    <string name="use_atouch">Shake</string>
    <string name="about_menu">About</string>
    <string name="settings_self_title" translatable="false">Broncho</string>
    <string name="settings_author_title">Author</string>
    <string name="settings_version_title">Version</string>
    <string name="settings_happen_category">Trigger Method</string>
    <string name="advance_category">Recording parameters</string>
    <string name="use_atouch_summary">Shake your device to show main menu</string>
    <string name="boot_auto">Auto Launch</string>
    <string name="boot_auto_summary">Auto launch Capturer after reboot</string>
    <string name="snack_bar_action_undo">UNDO</string>
    <string name="snack_bar_text_item_removed">1 item removed</string>
    <string name="float_record_cancel">Cancle</string>
    <string name="float_record_end_handle">Saving…</string>
    <string name="float_record_failed">screen record failed</string>
    <string name="float_record_hd_quality">HD</string>
    <string name="float_record_start">REC</string>
    <string name="float_record_start_content">Start</string>
    <string name="float_record_quality_content">Quality</string>
    <string name="float_record_normal_quality">WVGA</string>
    <string name="float_record_super_hd_quality">FHD</string>
    <string name="settings_with_arrow">Settings &gt;</string>
    <string name="exit">Exit</string>
    <string name="next_with_arrow">Next &gt;</string>
    <string name="next" translatable="false">Next</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="enable_permission_procedure">You can change permissions in Settings > Apps > Capturer > Permissions.</string>
    <string name="enable_permission_procedure_description">You can change permissions in Settings, Apps, Capturer, Permissions.</string>
    <string name="required_permissions_promo">Capturer needs permission to Storage.</string>
    <string name="empty_generic_main">No Datas</string>
    <string name="empty_generic_secondary">No Datas</string>
    <string name="video_set_length">Length</string>
    <string name="video_set_frame">Frame</string>
    <string name="video_set_scale">Size</string>
    <string name="video_to_gif">To GIF</string>
    <string name="gif_rate_setting_dialog_title">Select Gif Rate</string>
    <string name="gif_rate_unit">Frames/S</string>
    <string name="gif_max_length_setting_dialog_title">Set Max Time</string>
    <string name="gif_max_time_length_unit">S</string>
    <string name="rate_rang_setting_tips">Select larger, the GIF bigger</string>
    <string name="max_time_setting_tips">The more, the bigger Gif</string>
    <string name="gif_quality_setting_dialog_title">Select Gif Quality</string>
    <string name="gif_size_unit">Scale rate</string>
    <string name="gif_size_tips">The more, the bigger Gif</string>
    <string name="default_values">Default</string>
    <string name="twice_press_exit">Press again to exit!</string>
    <string name="stop">Stop</string>
    <string name="video_length">Video length: %s</string>
    <string name="not_enough_storage">Not enough storage available</string>
    <string name="video_stop_float">Float view</string>
    <string name="video_stop_notification">Notification</string>
    <string name="video_stop_method">Video stop method</string>
    <string name="video_stop_method_summary">Show float stop view</string>
    <string name="scroll_screenshot_toast_title">Long screenshot is working</string>
    <string name="scroll_screenshot_toast_text">Tap the screen to stop</string>
    <string name="home">Home</string>
    <string name="long_screenshot">Full page</string>
    <string name="free_screenshot">Free screenshot</string>
    <string name="rect_screenshot">Area screenshot</string>
    <string name="record_screenshot">Screen record</string>
    <string name="normal_screen_shot">Screenshot</string>
    <string name="free_crop_toast">Slide select picture taken part in need.</string>
    <string name="crop_toast">Double tap to get the result</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_text_empty">the feedback is too short</string>
    <string name="feedback_send_succeed">feedback send scuessed!</string>
    <string name="global_send">send</string>
    <string name="feedback_hint">input you feedback</string>
    <string name="insufficient_storage">Insufficient storage</string>
    <string name="float_record_first_switch_hd_toast">HD is 2 times of Normal</string>
    <string name="video_no_result_summary">Shake your device to take some video</string>
    <string name="gif_no_result_summary">switch to video to make some gifs</string>
    <string name="nav_night_mode">Night mode</string>
    <string name="nav_day_mode">Day mode</string>
    <string name="screenshot_title">Screenshot</string>
    <string name="image_transition" translatable="false">transition_image</string>
    <string name="turn_screen_orientation">Keep your device orientation is portrait</string>
    <string name="screenshot_no_result_summary">No screen shot</string>
    <string name="screenshot_sound">Screen shot sound</string>
    <string name="screenshot_sound_summary">trun on or turn off screen shot sound</string>
    <string name="long_screenshot_indicator">tap me to continue if you swipe,or it will stop</string>
    <string name="long_screenshot_progressing">Progressing…</string>
    <string name="long_screenshot_indicator_title">Please swipe form bottom to top as the indicator</string>
    <string name="long_screenshot_auto">Auto long screenshot</string>
    <string name="long_screenshot_auto_summary">auto swipe when take long screenshot</string>
    <string name="video_to_gif_need_so_text">We need to download the ffmpeg library,please tap the ok button to continue</string>
    <string name="video_to_gif_need_so_title">Download necessary library</string>
    <string name="not_support_devices">Sorry,this feature do not  support your devices!</string>
    <string name="downloading">Downloading...</string>
    <string name="processing">Processing...</string>
    <string name="wait">wait...</string>
    <string name="start">start...</string>
    <string name="success">success...</string>
    <string name="abort">abort...</string>
    <string name="error">error...</string>
    <string name="permission_title">Permission manager</string>
    <string name="screen_shot_title">Images</string>
    <string name="image_info">Details</string>
    <string name="image_info_size">Size: %1$s x %2$s </string>
    <string name="image_info_length">Length: %s </string>
    <string name="image_info_time">Time: %s </string>
    <string name="image_info_path">Path: %s </string>
    <string name="image_info_duration">Duration: %s</string>
    <string name="video_to_gif_success">Video to gif is succeed!</string>
    <string name="video_to_gif_failed">Video to gif is failed!</string>
    <string name="heigh_quality">Origin</string>
    <string name="accessibility_play_video">Play video</string>
    <string name="accessibility_pause_video">Pause video</string>
    <string name="accessibility_reload_video">Reload video</string>
    <string name="accessibility_time_bar">Video player time bar</string>
    <string name="loading_video">Loading video\\u2026</string>
    <string name="gif_length_error">Please select right gif time!</string>
    <string name="gif_quality_title">Select gif quality</string>
    <string name="gif_quality_high">High</string>
    <string name="gif_quality_normal">Normal</string>
    <string name="gif_quality_low">Low</string>
    <string name="all_rights_reserved" translatable="false">Copyright © 2012-2016 Broncho. All Rights Reserved.</string>
    <string name="skip">skip</string>
    <string name="done">done</string>
    <string name="welcome_head_1">Shake you phone to show main menu</string>
    <string name="welcome_content_1">It\'s easy to take screenshot,screen record,full page,free screenshot,rect screenshot</string>
    <string name="welcome_head_2">One key to share you screenshot or screen record</string>
    <string name="welcome_content_2">It\'s easy to share screenshot, screen record or screen gif to your friends</string>
    <string name="welcome_head_3">Screen record can translate to gif picture</string>
    <string name="welcome_content_3">It\'s easy to translate your screen record to gif picture</string>
    <string name="help">Help</string>
    <string name="edit">Edit</string>
    <string name="video_frame">Frame rate</string>
    <string name="video_frame_summary">Higher frame rates reduce motion blur</string>
    <string name="video_quality">Video quality</string>
    <string name="video_quality_summary">Higher quality means bigger file size</string>
    <string name="video_record_audio">Sound</string>
    <string name="video_record_audio_summary">System sounds or microphone</string>
</resources>