<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/action_settings">
    <PreferenceCategory android:title="@string/settings_happen_category">
        <SwitchPreference
            android:defaultValue="true"
            android:key="key_use_atouch"
            android:summary="@string/use_atouch_summary"
            android:title="@string/use_atouch"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="key_advance_category"
        android:title="@string/advance_category">
        <ListPreference
            android:defaultValue="75"
            android:entries="@array/video_size_percentage_entries"
            android:entryValues="@array/video_size_percentage_values"
            android:key="key_video_size_percentage"
            android:summary="@string/video_size_percentage_summary"
            android:title="@string/video_size_percentage"/>
        <ListPreference
            android:defaultValue="24"
            android:entries="@array/video_frame_entries"
            android:entryValues="@array/video_frame_values"
            android:key="key_video_frame"
            android:summary="@string/video_frame_summary"
            android:title="@string/video_frame"/>

        <ListPreference
            android:defaultValue="4000000"
            android:entries="@array/video_quality_entries"
            android:entryValues="@array/video_quality_values"
            android:key="key_video_quality"
            android:summary="@string/video_quality_summary"
            android:title="@string/video_quality"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="key_record_audio"
            android:summary="@string/video_record_audio_summary"
            android:title="@string/video_record_audio"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="key_video_stop_method"
            android:summary="@string/video_stop_method_summary"
            android:title="@string/video_stop_method"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="key_three_second_countdown"
            android:summary="@string/countdown_summary"
            android:title="@string/countdown"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="key_screenshot_sound"
            android:summary="@string/screenshot_sound_summary"
            android:title="@string/screenshot_sound"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="key_long_screenshot_auto"
            android:summary="@string/long_screenshot_auto_summary"
            android:title="@string/long_screenshot_auto"/>
    </PreferenceCategory>
    <!-- About -->
    <PreferenceCategory android:title="@string/about_menu">
        <Preference
            android:key="about_author"
            android:summary="@string/settings_self_title"
            android:title="@string/settings_author_title"/>
        <Preference
            android:key="key_version"
            android:title="@string/settings_version_title"/>
    </PreferenceCategory>

</PreferenceScreen>
