<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_screenshot"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/screen_shot_title"/>
        <item
            android:id="@+id/nav_gifs"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gif_title"/>
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/video_title"/>

    </group>

    <item android:title="@string/advance_category">
        <menu>
            <item
                android:id="@+id/nav_night_mode"
                android:icon="@drawable/ic_mode_day"
                android:title="@string/nav_night_mode"/>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback"/>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings"/>
        </menu>
    </item>

</menu>
