<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/PromoScreenTextStyle.CenterAligned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:text="@string/required_permissions_promo" />

    <TextView
        android:id="@+id/enable_permission_procedure"
        style="@style/PromoScreenTextStyle.CenterAligned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/enable_permission_procedure_description"
        android:paddingTop="16dp"
        android:text="@string/enable_permission_procedure"
        android:visibility="invisible" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exit"
            style="@style/PromoScreenButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/exit" />

        <TextView
            android:id="@+id/next"
            style="@style/PromoScreenButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/next"
            android:text="@string/next_with_arrow" />

        <TextView
            android:id="@+id/settings"
            style="@style/PromoScreenButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/settings"
            android:text="@string/settings_with_arrow"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>
