<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.DetailsActivity">
    <item
        android:id="@+id/video_edit"
        android:icon="@drawable/ic_content_cut"
        android:orderInCategory="100"
        android:title="@string/video_to_gif"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/image_share"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/image_info"
        android:icon="@drawable/ic_info"
        android:orderInCategory="100"
        android:title="@string/image_info"
        app:showAsAction="ifRoom" />

</menu>
