<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.way.capture.activity.GuideActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

<!--    <com.way.capture.widget.springindicator.SpringIndicator
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp" />-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/button_layout"
        android:background="#33ffffff" />

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/skip"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/abc_primary_text_material_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/done"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/abc_primary_text_material_dark"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/next"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/next_with_arrow"
            android:textColor="@color/abc_primary_text_material_dark"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/circles"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:gravity="center"
            android:orientation="horizontal" />
    </RelativeLayout>

</RelativeLayout>
